@@ -36,6 +36,8 @@ use constant SEVERITY_GOOD   => 0.5;    # within this deviation, okay
 
 use constant NUMERIC_PRECISION => 5;
 
+my @on_ready_js;
+
 my %opt = (
     file => 'nytprof.out',
     out  => 'nytprof',
@@ -174,7 +176,7 @@ sub subroutine_table {
 
     my $sortby_desc = ($sortby eq 'excl_time') ? "exclusive time" : "inclusive time";
     $sub_links .= qq{
-        <table id="subroutines" border="1" cellpadding="0">
+        <table id="subs_table" border="1" cellpadding="0" class="tablesorter">
         <caption>${qualifier}Subroutines &mdash; ordered by $sortby_desc</caption>
         <thead>
         <tr>
@@ -236,8 +238,20 @@ sub subroutine_table {
 
         $sub_links .= "</tr>\n";
     }
-    $sub_links .= "</tbody>\n";
-    $sub_links .= "</table>\n";
+    $sub_links .= q{
+        </tbody>
+        </table>
+    };
+    # sort on 4th col (excl_time,desc) then 6th (pkg) and 7th (name)
+    push @on_ready_js, q{
+        $("#subs_table").tablesorter({
+            sortList: [[3,1],[5,0],[6,0]],
+            headers: {
+                3: { sorter: 'fmt_time' },
+                4: { sorter: 'fmt_time' }
+            }
+        });
+    };
 
     return $sub_links;
 }
@@ -519,9 +533,9 @@ sub output_indexpage {
 
 sub output_js_files {
     my ($profile) = @_;
-    # find the js files installed with Devel::NYTProf
+    # find the js, gif, css etc files installed with Devel::NYTProf
     (my $lib = $INC{"Devel/NYTProf/Data.pm"}) =~ s/Data\.pm$//;
-    for my $src (<$lib/js/*.js>) {
+    for my $src (<$lib/js/*>) {
         (my $file = $src) =~ s/.*\///;
         unlink "$opt{out}/$file";
         copy($src, "$opt{out}/$file")
@@ -602,7 +616,7 @@ sub file_table {
 
     # generate time-sorted sections for files
     print OUT qq{
-        <table border="1" cellspacing="0">
+        <table id="filestable" border="1" cellspacing="0" class="tablesorter">
         <caption>Source Code Files &mdash; ordered by exclusive time then name</caption>
     };
     print OUT qq{
@@ -662,7 +676,7 @@ sub file_table {
             my $eval_fileinfos = grep { $_->eval_line } $profile->all_fileinfos;
             $stmt_time_diff = ($stmt_time_diff > 0.000_010)
                 ? sprintf(" and %s", fmt_time($stmt_time_diff)) : "";
-            $t_notes = sprintf "(%d string evals account for a further %d statements%s)</i>",
+            $t_notes = sprintf "(%d string evals account for a further %d statements%s)",
                 $eval_fileinfos, $allCalls - $t_stmt_exec, $stmt_time_diff;
         }
         print OUT sprintf $stats_fmt, fmt_float($t_stmt_exec), fmt_time($t_stmt_time), '',
@@ -680,6 +694,17 @@ sub file_table {
         print OUT "</tfoot>\n";
     }
     print OUT '</table>';
+    # sort on 2nd col (excl_time,desc) then 5th (name)
+    push @on_ready_js, q{
+        $("#filestable").tablesorter({
+            sortList: [[1,1],[4,0]],
+            headers: {
+                1: { sorter: 'fmt_time' },
+                2: { sorter: 'fmt_time' },
+                3: { sorter: false      }
+            }
+        });
+    };
 
     return "";
 }
@@ -787,9 +812,21 @@ sub get_footer {
     my ($profile) = @_;
     my $version = $Devel::NYTProf::Core::VERSION;
 
+    my $js = '';
+    if (@on_ready_js) {
+        # XXX I've no idea why this workaround is needed (or works).
+        # without it the file table on the index page isn't sortable
+        @on_ready_js = reverse @on_ready_js;
+        $js = sprintf q{
+            <script type="text/javascript"> $(document).ready(function() { %s } ); </script>
+        }, join("\n", '', @on_ready_js, '');
+        @on_ready_js = ();
+    };
+
     # spacing so links to #line near can put right line at top near the bottom of the report
     my $spacing = "<br />" x 10;
     return qq{
+        $js
         <div class="footer">Report produced by the
         <a href="http://search.cpan.org/dist/Devel-NYTProf/">NYTProf $version</a>
         Perl profiler, developed by
@@ -809,15 +846,38 @@ sub get_html_header {
      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <!--
-This file was generated by Devel::NYTProf::Reader HTML Version $VERSION
-using Devel::NYTProf Version $Devel::NYTProf::Core::VERSION
-These modules are free. They are licensed under the same terms as Perl itself.
+This file was generated by Devel::NYTProf version $Devel::NYTProf::Core::VERSION
 -->
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
     <meta http-equiv="Content-Language" content="en-us"></meta>
     <link rel="stylesheet" type="text/css" href="style.css"></link>
     <title>$title</title>
+    <script type="text/javascript" src="jquery.min.js"></script> 
+    <script type="text/javascript" src="jquery.tablesorter.min.js"></script> 
+    <link rel="stylesheet" type="text/css" href="style.tablesorter.css"></link>
+    <script type="text/javascript">
+    // add parser through the tablesorter addParser method 
+    \$.tablesorter.addParser({ 
+        id: 'fmt_time',   // name of this parser
+        is: function(s) { 
+            return false; // return false so this parser is not auto detected 
+        }, 
+        format: function(orig) { // format data for normalization 
+            // console.log(orig);
+            var val = orig.replace(/ms/,'');
+            if (val != orig) { return val / (1000); }
+            val = orig.replace(/µs/,''); /* XXX use &micro; ? */
+            if (val != orig) { return val / (1000*1000); } 
+            val = orig.replace(/ns/,'');
+            if (val != orig) { return val / (1000*1000*1000); } 
+            console.log('no match for fmt_time of '.concat(orig));
+            return orig;
+        },
+        type: 'numeric' // set type, either numeric or text 
+    }); 
+    </script> 
+
 </head>
 EOD
 }
@@ -922,7 +982,7 @@ a:hover { color: red; }
 body { font-family: sans-serif; margin: 0px; }
 .body_content { margin: 8px; }
 
-.header { font-family: sans-serif; padding-left: 1em; }
+.header { font-family: sans-serif; padding-left: 0.5em; padding-right: 0.5em; }
 .headerForeground { color: white; padding: 10px; padding-top: 50px; }
 .siteTitle { font-size: 2em; }
 .siteSubTitle { font-size: 1.2em; }
@@ -994,7 +1054,6 @@ td.sub_pkg {
   font-family: monospace;
   color: gray;
 }
-
 td.sub_sub {
   text-align: left;
   padding-left: 0;
@@ -1039,18 +1098,10 @@ pre,.s {
  *   c3  : path covered or coverage = 100%
  */
 .c0, .c1, .c2, .c3 { text-align: right; }
-.c0 {
-    background-color: #ff9999;
-}
-.c1 {
-    background-color: #ffcc99;
-}
-.c2 {
-    background-color: #ffff99;
-}
-.c3 {
-    background-color: #99ff99;
-}
+.c0 { background-color: #ff9999; }
+.c1 { background-color: #ffcc99; }
+.c2 { background-color: #ffff99; }
+.c3 { background-color: #99ff99; }
 
 /* warnings */
 .warn {
@@ -1060,7 +1111,6 @@ pre,.s {
     text-align: center;
     padding: 5px 0;
 }
-
 .warn_title {
     background-color: #FFFFAA;
     border: 0;
@@ -1086,9 +1136,9 @@ pre,.s {
 .calls       a       { color: gray;  text-decoration: none; }
 .calls:hover a       { color: black; text-decoration: underline; }
 .calls:hover a:hover { color: red; }
-
 /* give a little headroom to the summary of calls into a sub */
 .calls .calls_in { margin-top: 5px; }
+
 EOD
 }
 
